1.0/aws/morpheus_classroom/mor-adm/by_count/sgs.tf
############################################################################
# SG Vars
############################################################################

# TODO get ssh ingress IP specific working
variable "ssh_ingress_cidrs" {
    type = list(string)
    description = "CIDRs allowed to access this system over SSH"
    default = ["0.0.0.0/0"]
}

resource "aws_security_group" "app_nodes" {
  count = var.instance_count
  description = "Allows communication in for Morpheus app nodes"
  vpc_id = aws_vpc.main[count.index].id

  depends_on = [
    aws_vpc.main
  ]

  ingress = [ 
    {
    cidr_blocks = [ "0.0.0.0/0" ]
    description = "Allow HTTPS in"
    from_port = 443
    to_port = 443
    protocol = "tcp"
    ipv6_cidr_blocks = []
    prefix_list_ids = []
    security_groups = []
    self = false
    },
    {
    cidr_blocks = var.ssh_ingress_cidrs
    description = "Allow SSH in"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    ipv6_cidr_blocks = []
    prefix_list_ids = []
    security_groups = []
    self = false
    }
   ]
  egress = [ {
    cidr_blocks = [ "0.0.0.0/0" ]
    description = "Allow ALL Out"
    from_port = 0
    to_port = 0
    protocol = "-1"
    ipv6_cidr_blocks = []
    prefix_list_ids = []
    security_groups = []
    self = false
  } ]
  tags = {
    "Name" = "mor-adm-${var.region}-${count.index}"
  }
}
